traefik/traefik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
        - name: traefik
          image: traefik:v2.9
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: admin
              containerPort: 9000
            - name: metrics
              containerPort: 9100
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          args:
            - --configfile=/etc/traefik/config/traefik.yaml
          volumeMounts:
            - mountPath: /etc/traefik/config
              name: config
            - mountPath: /etc/traefik/logs
              name: logdir
            - mountPath: /etc/localtime
              name: timezone
              readOnly: true
          resources:
            limits:
              cpu: 200m
              memory: 30Mi
            requests:
              cpu: 100m
              memory: 20Mi
      volumes:
        - name: config
          configMap:
            name: traefik-config
        - name: logdir
          hostPath:
            path: /data/traefik/logs
            type: "DirectoryOrCreate"
        - name: timezone
          hostPath:
            path: /etc/localtime
            type: File
      tolerations:                             # 设置容忍所有污点，防止节点被设置污点
        - operator: "Exists"
#      hostNetwork: true                        # 开启host网络，提高网络入口的网络性能
#      dnsConfig:
#        searches:
#          - traefik.svc.cluster.local
#          - svc.cluster.local
#          - cluster.local
#      nodeSelector: # 设置node筛选器，在特定label的节点上启动
#        IngressProxy: "true"                   # 调度至IngressProxy: "true"的节点
