traefik/traefik-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
spec:
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80
    - name: websecure
      protocol: TCP
      port: 443
      targetPort: 443
    - protocol: TCP
      port: 9000
      name: admin
      targetPort: 9000
    - protocol: TCP
      port: 9100
      name: metrics
      targetPort: 9100
  type: NodePort
