traefik/traefik-dashboard-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
#  annotations:
#    kubernetes.io/ingress.class: traefik #  因为静态配置文件指定了ingressclass，所以这里的annotations 要指定，否则访问会404
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.costalong.cn`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
          namespace: traefik
