traefik/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-ingress
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: traefik.test.com
      http:
        paths:
          - path: /dashboard
            pathType: Prefix
#            pathType: Exact
            backend:
              service:
                name: traefik
                port:
                  number: 9000
